--- a/package.json
+++ b/package.json
@@ -54,10 +54,13 @@
     "test-listen": "1.0.2"
   },
   "dependencies": {
-    "jsonwebtoken": "7.4.3",
+    "cors": "2.8.4",
+    "express-jwt": "5.3.0",
+    "finalhandler": "1.0.4",
     "marked": "0.3.6",
     "micro": "8.0.4",
     "mongojs": "2.4.1",
+    "router": "1.3.1",
     "winston": "2.3.1",
     "winston-papertrail": "1.0.5"
   }
