Updated rules and env

--- a/production.env
+++ b/production.env
@@ -1,7 +1,6 @@
 NODE_ENV=production
-DB=@skoleskyss-logs-db
-JWT_SECRET=@skoleskyss-jwt-secret
-CALLBACK_STATUS_URL=@skoleskyss-callback-url
-PAPERTRAIL_HOSTNAME=skoleskyss
+DB=@tfk-logs-db
+JWT_SECRET=@tfk-jwt-secret
+PAPERTRAIL_HOSTNAME=logs
 PAPERTRAIL_HOST=@tfk-papertrail-host
 PAPERTRAIL_PORT=@tfk-papertrail-port
