--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "micro-logs-main",
   "description": "Main logs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "private": true,
   "author": {
@@ -11,7 +11,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">=8.5.0"
+    "node": ">=8.6.0"
   },
   "scripts": {
     "test": "standard && nsp check && ava",
@@ -57,7 +57,7 @@
     "cors": "2.8.4",
     "express-jwt": "5.3.0",
     "finalhandler": "1.1.0",
-    "marked": "0.3.6",
+    "markdown-it": "8.4.0",
     "micro": "9.0.0",
     "mongojs": "2.4.1",
     "router": "1.3.2",
