Implements now:dotenv

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "micro-logs-main",
   "description": "Main logs",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "private": true,
   "author": {
@@ -21,7 +21,7 @@
     "standard-fix": "standard --fix",
     "start": "micro",
     "dev": "micro-dev",
-    "now-deploy": "npm test && now --npm -E production.env && now alias"
+    "now-deploy": "npm test && now --npm && now alias"
   },
   "keywords": [
     "microservice",
@@ -41,7 +41,8 @@
     "alias": [
       "main.logs.t-fk.no"
     ],
-    "type": "npm"
+    "type": "npm",
+    "dotenv": "production.env"
   },
   "devDependencies": {
     "ava": "0.22.0",
