--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">=8.6.0"
+    "node": ">=8.9.3"
   },
   "scripts": {
     "test": "standard && nsp check && ava",
@@ -42,12 +42,14 @@
       "main.logs.t-fk.no"
     ],
     "type": "npm",
-    "dotenv": "production.env"
+    "dotenv": "production.env",
+    "engines": {
+      "node": "8.9.3"
+    }
   },
   "devDependencies": {
     "ava": "0.24.0",
     "axios": "0.17.1",
-    "ava": "0.24.0",
     "coveralls": "3.0.0",
     "nsp": "3.1.0",
     "micro-dev": "2.1.0",
@@ -63,7 +65,7 @@
     "micro": "9.0.2",
     "mongojs": "2.4.1",
     "router": "1.3.2",
-    "winston": "3.0.0-rc0",
+    "winston": "2.4.0",
     "winston-papertrail": "1.0.5"
   }
 }
