--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">=8.9.3"
+    "node": ">=8.11.1"
   },
   "scripts": {
     "test": "standard && nsp check && ava",
@@ -21,7 +21,8 @@
     "standard-fix": "standard --fix",
     "start": "micro",
     "dev": "micro-dev",
-    "now-deploy": "npm test && now --npm && now alias"
+    "now-deploy": "npm test && now --npm && now alias",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "keywords": [
     "microservice",
@@ -31,12 +32,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/telemark/micro-logs-main.git"
+    "url": "git+https://github.com/telemark/micro-logs-main.git"
   },
   "bugs": {
     "url": "https://github.com/telemark/micro-logs-main/issues"
   },
-  "homepage": "https://github.com/telemark/micro-logs-main",
+  "homepage": "https://github.com/telemark/micro-logs-main#readme",
   "now": {
     "alias": [
       "main.logs.t-fk.no"
@@ -44,7 +45,7 @@
     "type": "npm",
     "dotenv": "production.env",
     "engines": {
-      "node": "8.9.3"
+      "node": "8.11.1"
     }
   },
   "devDependencies": {
