Adds comment (ignore)

--- a/production.env
+++ b/production.env
@@ -1,6 +1,6 @@
 NODE_ENV=production
 DB=@tfk-logs-db
-JWT_SECRET=@tfk-jwt-secret
+JWT_SECRET=@tfk-jwt-secret # Remove this to run without jwt
 PAPERTRAIL_HOSTNAME=logs
 PAPERTRAIL_HOST=@tfk-papertrail-host
 PAPERTRAIL_PORT=@tfk-papertrail-port
