--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "coverage": "nyc ava",
     "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
     "standard-fix": "standard --fix",
-    "start": "micro",
-    "dev": "micro-dev",
-    "deploy": "npm test && now && now alias",
+    "dev": "now dev",
+    "deploy": "npm test && now --target production",
     "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "keywords": [
@@ -40,20 +39,16 @@
   "homepage": "https://github.com/telemark/micro-logs-main#readme",
   "devDependencies": {
     "ava": "1.4.1",
-    "axios": "0.18.0",
     "coveralls": "3.0.3",
-    "micro-dev": "3.0.0",
     "nyc": "14.1.1",
-    "standard": "12.0.1",
-    "test-listen": "1.1.0"
+    "standard": "12.0.1"
   },
   "dependencies": {
     "cors": "2.8.5",
     "express-jwt": "5.3.1",
     "finalhandler": "1.1.2",
-    "markdown-it": "8.4.2",
     "micro": "9.3.4",
-    "mongojs": "2.6.0",
+    "mongodb": "3.2.4",
     "router": "1.3.3",
     "winston": "2.4.4",
     "winston-papertrail": "1.0.5"
